# fedi-gock

./: Cargo.toml  README.md  example.config.yaml  flake.nix
src/: client.rs  main.rs
